--- a/frontend/src/Components/Breadcrums/Breadcrums.css
+++ b/frontend/src/Components/Breadcrums/Breadcrums.css
@@ -1,6 +1,6 @@
 .breadcrums{
     width: 100%;
-    padding: 10px 20px;
+    padding: 8px 20px;
     background: #fff;
     border-top: 1px solid #eee;
     border-bottom: 1px solid #eee;
@@ -8,7 +8,19 @@
     align-items: center;
     font-size: 13px;
 }
+.breadcrums .breadcrums-link{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .breadcrums span:hover{
     text-decoration: underline;
     cursor: pointer;
+
+}
+.breadcrums svg{
+    margin-left: 5px;
+    margin-right: 5px;
+    font-size: 15px;
+    margin-top: 5px;
 }
