--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -57,6 +57,7 @@
   border-radius: 0 4px 4px 0;
   display: flex;
   align-items: center;
+  transition: all 0.3s ease-in-out;
 }
 
 .search-bar .search-btn:hover {
@@ -210,28 +211,21 @@
 
 .nav-loginSignup .signin-btn {
   padding: 8px 16px;
-  /* border: 1px solid #ff4141; */
-  /* background-color: #fff; */
   border: 1px solid #999999;
-
-  /* background-color: #f0f0f0; */
   background-color: #0048ba;
-  /* color: #555; */
   color: #fff;
   font-weight: 600;
   border-radius: 100px;
   cursor: pointer;
-  transition: background-color 0.3s, color 0.3s;
+  /* transition: background-color 0.3s, color 0.3s; */
+  transition: all 0.3s ease-in-out;
   position: relative;
 }
 
 .nav-loginSignup .signin-btn:hover {
-  /* background-color: #ff6f61; */
   background: #dadeff;
   color: #0060ba;
   border: 1px solid #0048ba;
-  /* background: #ff4141; */
-  /* background: #0048ba; */
 }
 .profile-dropdown {
   position: absolute;
