--- a/frontend/src/Pages/CSS/Cart.css
+++ b/frontend/src/Pages/CSS/Cart.css
@@ -12,7 +12,7 @@
   border-radius: 3px;
   position: relative;
 }
-#showAddToCartAlert_snackbar {
+#showDeleteCartAlert_snackbar {
   visibility: hidden; 
   min-width: 250px; 
   margin-left: -125px; 
@@ -23,13 +23,14 @@
   padding: 16px; 
   position: absolute; 
   z-index: 100; 
-  top: -10%;
+  /* top: -10%; */
   right: 30px; 
+  bottom: 50px; 
   font-weight: 600;
 }
 
 
-#showAddToCartAlert_snackbar.showAddToCartAlert-Snackbar {
+#showDeleteCartAlert_snackbar.showDeleteCartAlert-Snackbar {
   visibility: visible;
   -webkit-animation: fadein 0.3s, fadeout 0.5s 2.5s;
   animation: fadein 0.3s, fadeout 0.5s 2.5s;
@@ -144,9 +145,7 @@
   justify-content: space-between;
   margin-top: 10px;
 }
-
-.update-cart button, 
-.continue-shopping button{
+.continue-shopping .continue-shopping-btn{
   padding: 10px 20px;
   background: #333;
   color: white;
@@ -154,11 +153,27 @@
   border-radius: 5px;
   cursor: pointer;
   font-weight: 600;
-  transition: background 0.3s ease;
+  transition: background-color 0.5s;
 }
-.update-cart button:hover, 
-.continue-shopping button:hover{
-  background: #555;
+
+.update-cart .update-cart-btn{
+  padding: 10px 20px;
+  background: #008000;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: 600;
+  /* transition: all .3s ease-in-out; */
+  transition: background-color 0.5s;
+}
+
+.update-cart .update-cart-btn:hover {
+  background: #0048ba;
+}
+
+.continue-shopping .continue-shopping-btn:hover{
+  background: #0048ba;
 }
 
 .cart-payment-container{
@@ -226,17 +241,6 @@
 }
 
 .checkout button{
-  /* width: 100%;
-  height: 3rem;
-  margin-top: 20px;
-  border: none;
-  outline: none;
-  font-size: 1rem;
-  font-weight: 600;
-  background: #ff4141;
-  color: #fff;
-  border-radius: 3px;
-  cursor: pointer; */
   padding: 10px 20px;
   background: #ff4d4d;
   color: white;
@@ -255,7 +259,7 @@
   margin-top: 5px;
 }
 .checkout button:hover{
-  background: #ff6666;
+  background: #0048ba;
 }
 .cart-container svg{
   font-size: 20px;
